--- a/index.html
+++ b/index.html
@@ -9,16 +9,44 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
-  <section>  
+  <section class="top-banner">  
     <div class="half-width">    
         <h1>Welcome To</h1>
-        <h1><span class="name-highlight">Asif</span> website</h1>
+        <h1><span class="orange-highlight">Asif</span> website</h1>
         <h3>World class developer</h3>
-        <p>there is so many tag in website.one class,two header,when this compelete.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <p>There is so many tag in website.one class,two header,when this compelete.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero">HIRE ME</a>
    </div>
    <div class=half-width>
        <img src="images/jhankar.png" alt="">
    </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="file:///C:/Web%20Development/project/web.protfolio/index.html">DWONLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience">
+        <h2>Excperience</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack developer</h2>
+            <h3 class="orange-highlight">2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="web-baby" class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlight">2020-2021 | Programming Hero Learner</h3>
+            <P>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</P>
+        </div>
+    </section>
+    <footer>
+        <p>© asif 2021, a Programming Beginner initiative.</p>
+    </footer>
 </body>
 </html>
